Fixed services mobile text align

--- a/styles/services/service.scss
+++ b/styles/services/service.scss
@@ -99,7 +99,11 @@
                         }
                     }
 
-
+                    p{
+                        width: 90%;
+                        margin-left: auto;
+                        margin-right: auto;
+                    }
 
                     li {
                         text-align: left;
